# chess_ui

./: .gitmodules  CMakeLists.txt  README.md
src/: Board.hpp  Window.hpp
ui/: CMakeLists.txt
ui/src/: BoardWidget.cpp  BoardWidget.hpp  EngineInfoWidget.hpp  EngineInstance.hpp  GameControlsWidget.hpp  GameEndDialog.hpp  GameOptions.hpp  GameOptionsWidget.hpp  GameWidget.hpp  MainWindow.hpp  MoveListWidget.cpp  MoveListWidget.hpp  PromotionSelector.cpp  PromotionSelector.hpp  Window.hpp  main.cpp
